[package]
name = "sinum"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]
tex = []

[dependencies]
serde = { version = "1.0.195", features = ["derive"], optional = true }
thiserror = "1.0.56"
