[package]
name = "sinum"
version = "0.3.0"
edition = "2021"
authors = ["Victor von Rhein"]
description = "Representing numbers and quantities by enabling the use of prefixes and units."
readme = "README.md"
repository = "https://github.com/Kamduis/sinum"
license = "MIT OR Apache-2.0"
keywords = ["si-units", "units", "physics", "science", "measurement"]
categories = ["mathematics", "science"]

[features]
serde = ["dep:serde"]
tex = []

[dependencies]
serde = { version = "1.0.195", features = ["derive"], optional = true }
thiserror = "1.0.56"
