[package]
name = "sinum"
version = "0.4.3"
edition = "2021"
authors = ["Victor von Rhein"]
description = "Representing numbers and quantities by enabling the use of prefixes and units."
readme = "README.md"
repository = "https://github.com/Kamduis/sinum"
license = "MIT OR Apache-2.0"
keywords = ["si-units", "units", "physics", "science", "measurement"]
categories = ["mathematics", "science"]

[features]
i18n = ["dep:fluent-templates", "dep:unic-langid"]
serde = ["dep:serde"]
tex = []

[dependencies]
fluent-templates = { version = "0.13.0", optional = true }
serde = { version = "1.0.195", features = ["derive"], optional = true }
thiserror = "2.0.6"
unic-langid = { version = "0.9.5", optional = true }
